No longer showing the schedule view for 'medium' screens
The schedule view is cut off for medium screens, so I've made it only visible on large screens.  Also did a minor html change for the advanced search.  Basically just changed to from saying advanced to a down arrow. Also added the search class to the advanced search modal's query input, so that it gets auto-populated with the already present search query

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -123,20 +123,20 @@ span.gpa.average {
 	position: fixed;
 	top:45px;
 }
-.medium-6.fixed-top-right {
+.large-6.fixed-top-right {
 	margin-left:calc(80rem*6/12);
 	width: calc(80rem*6/12);
 }
-.medium-4.fixed-top-right {
+.large-4.fixed-top-right {
 	margin-left: calc(80rem*8/12);
 	width: calc(80rem*4/12);
 }
 @media(max-width:80rem) {
-	.medium-4.fixed-top-right {
+	.large-4.fixed-top-right {
 		margin-left:66.6666%;
 		width: 33.333%;
 	}
-	.medium-6.fixed-top-right {
+	.large-6.fixed-top-right {
 		margin-left:50%;
 		width:50%;
 	}
